// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/DropdownMenu DropdownMenu 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="open dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="open dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 hDMVDi IconicButton-cimfyu-2 dBFLvz"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu set to defaultOpen 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="close dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
    <div
      class="Box-xda4ls-0 DropdownMenuContainer-sc-12o3dvc-0 ebyuBb  nds-popper-pop-up"
      open=""
      style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
    >
      <a
        class="DropdownLink-sc-73jvsg-0 TZPmM"
        color="darkBlue"
        href="/"
      >
        Dropdown Link
      </a>
      <button
        class="DropdownButton-sc-16gk4iv-0 kBjAIy"
        color="darkBlue"
      >
        Dropdown Button
      </button>
      <div
        class="DropdownItem-xev49s-0 cKnlHS"
      >
        <a
          href="/"
          style="text-decoration:none"
        >
          Custom Link Component
        </a>
      </div>
      <div
        class="PopperArrow-sc-1bcgj4w-0 dGhVUx"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu with button closing menu 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="open dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu with custom colors 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="close dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
    <div
      class="Box-xda4ls-0 DropdownMenuContainer-sc-12o3dvc-0 dtpPym  nds-popper-pop-up"
      open=""
      style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
    >
      <a
        class="DropdownLink-sc-73jvsg-0 flPSyM"
        color="white"
        href="/"
      >
        Dropdown Link
      </a>
      <button
        class="DropdownButton-sc-16gk4iv-0 jpSdmz"
        color="white"
      >
        Dropdown Button
      </button>
      <div
        class="PopperArrow-sc-1bcgj4w-0 duKylJ"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu with custom item 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="open dropdown"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--more"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/DropdownMenu with custom trigger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="open dropdown"
      class="Button__WrapperButton-hxfi59-0 kXvjuR"
      type="button"
    >
      Custom Trigger
    </button>
  </div>
</div>
`;
